infrastructure/k8s-prod/loadbalancer-depl.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.2
          args:
            - --entryPoints.websecure.forwardedHeaders.insecure
            - --entryPoints.web.forwardedHeaders.insecure
            - --log.level=DEBUG
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --providers.kubernetescrd
            - --certificatesresolvers.resolver.acme.dnschallenge.provider=namecheap
            - --certificatesresolvers.resolver.acme.dnschallenge.delaybeforecheck=5
            - --certificatesresolvers.resolver.acme.email=kamilwronka7@gmail.com
            - --certificatesresolvers.resolver.acme.storage=acme.json
            - --certificatesresolvers.resolver.acme.dnschallenge=true
            - --certificatesresolvers.resolver.acme.dnschallenge.resolvers=8.8.8.8:53
          ports:
            - name: web
              containerPort: 80
            - name: admin
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 443
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
