infrastructure/k8s-prod/ingress-depl.yml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: ingress-service

spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`api.shopn.io`) && PathPrefix(`/auth-service`)
      kind: Rule
      services:
        - name: auth-srv
          port: 80
      middlewares:
        - name: stripprefix
          namespace: default
        - name: compress
          namespace: default
    - match: Host(`app.shopn.io`)
      kind: Rule
      services:
        - name: dashboard-srv
          port: 80
      middlewares:
        - name: compress
          namespace: default
  tls:
    certResolver: resolver
    domains:
      - main: shopn.io
        sans:
          - api.shopn.io
          - app.shopn.io
